ros_workspace/log/build_2020-12-02_06-36-40/ralph_py/stderr.log
  File "/home/propp/Independent_Study/ros_workspace/install/ralph_py/lib/python3.8/site-packages/ralph_py/ralph.py", line 58
    elif(i < len(current) and i > smaller)
                                         ^
SyntaxError: invalid syntax

